initial styling to clean up defaults

--- a/main.css
+++ b/main.css
@@ -1,1 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Boogaloo&family=Roboto:wght@300&family=Varela+Round&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+}
