--- a/main.scss
+++ b/main.scss
@@ -8,3 +8,15 @@ $color-primary: rgb(27, 25, 52);
 $color-secondary: rgb(55, 229, 241);
 $color-footer: rgb(251, 247, 216);
 $color-background: rgb(238, 238, 238);
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: $font-body;
+}
+
+a:link,
+a:visited {
+    text-decoration: none;
+}
