--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  background-color: #fcf9f9;
 }
 
 a:link,
@@ -12,7 +13,7 @@ a:visited {
 }
 
 body {
-  max-width: 650px;
+  max-width: 700px;
   margin: auto;
 }
 
@@ -25,9 +26,21 @@ nav h1 {
   font-family: "Boogaloo", sans-serif;
   font-size: 90px;
   color: #333059;
-  margin-right: 260px;
+  margin-right: 110px;
 }
 
 .login-button {
+  display: block;
+  width: 200px;
+  background-color: #fcf9f9;
+  text-align: center;
+  font-weight: bolder;
+  font-family: "Roboto", sans-serif;
+  font-size: 26px;
   color: #333059;
+  padding: 24px 60px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #333059;
 }
