--- a/main.scss
+++ b/main.scss
@@ -7,13 +7,14 @@ $font-display:"Varela Round", sans-serif;
 $color-primary: rgb(51, 48, 89);
 $color-secondary: rgb(55, 229, 241);
 $color-footer: rgb(251, 247, 216);
-$color-background: rgb(238, 238, 238);
+$color-background: rgb(252, 249, 249);
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: $font-body;
+    background-color: $color-background;
 }
 
 a:link,
@@ -22,7 +23,7 @@ a:visited {
 }
 
 body {
-    max-width: 650px;
+    max-width: 700px;
     margin: auto;
 }
 
@@ -35,10 +36,24 @@ nav {
         font-family: $font-logo;
         font-size: 90px;
         color: $color-primary;
-        margin-right: 260px;
+        margin-right: 110px;
     }
 }
 
 .login-button {
+    display: block;
+    width: 200px;
+    background-color: $color-background;
+
+    text-align: center;
+    font-weight: bolder;
+    font-family: $font-body;
+    font-size: 26px;
     color: $color-primary;
+
+    padding: 24px 60px;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: $color-primary;
 }
