--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  color: #333059;
   background-color: #fcf9f9;
 }
 
@@ -43,4 +44,52 @@ nav h1 {
   border-style: solid;
   border-width: 2px;
   border-color: #333059;
+}
+
+.colored-login-button {
+  display: block;
+  width: 390px;
+  background-color: #333059;
+  text-align: center;
+  font-weight: bolder;
+  font-family: "Roboto", sans-serif;
+  font-size: 30px;
+  color: #fcf9f9;
+  padding: 26px 60px;
+  border-radius: 10px;
+  margin: 36px;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+header h2 {
+  font-family: "Varela Round", sans-serif;
+  color: #2dc5e3;
+  font-size: 48px;
+  text-align: center;
+  max-width: 500px;
+  margin: 68px;
+}
+header img {
+  min-width: 450px;
+}
+header h3 {
+  font-weight: bolder;
+  font-size: 42px;
+  text-align: center;
+  margin: 80px;
+}
+header h4 {
+  color: #2dc5e3;
+  font-weight: bolder;
+  font-size: 38px;
+  text-align: center;
+}
+header p {
+  font-size: 30px;
+  margin: 80px;
 }
