--- a/main.scss
+++ b/main.scss
@@ -5,7 +5,7 @@ $font-body: "Roboto", sans-serif;
 $font-display:"Varela Round", sans-serif;
 
 $color-primary: rgb(51, 48, 89);
-$color-secondary: rgb(55, 229, 241);
+$color-secondary: rgb(45, 197, 227);
 $color-footer: rgb(251, 247, 216);
 $color-background: rgb(252, 249, 249);
 
@@ -14,6 +14,7 @@ $color-background: rgb(252, 249, 249);
     padding: 0;
     box-sizing: border-box;
     font-family: $font-body;
+    color: $color-primary;
     background-color: $color-background;
 }
 
@@ -56,4 +57,56 @@ nav {
     border-style: solid;
     border-width: 2px;
     border-color: $color-primary;
+}
+
+.colored-login-button {
+    display: block;
+    width: 390px;
+    background-color: $color-primary;
+
+    text-align: center;
+    font-weight: bolder;
+    font-family: $font-body;
+    font-size: 30px;
+    color: $color-background;
+
+    padding: 26px 60px;
+    border-radius: 10px;
+
+    margin: 36px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    h2 {
+        font-family: $font-display;
+        color: $color-secondary;
+        font-size: 48px;
+        text-align: center;
+        max-width: 500px;
+        margin: 68px;
+    }
+    img {
+        min-width: 450px;
+    }
+    h3 {
+        font-weight: bolder;
+        font-size: 42px;
+        text-align: center;
+        margin: 80px;
+    }
+    h4 {
+        color: $color-secondary;
+        font-weight: bolder;
+        font-size: 38px;
+        text-align: center;
+    }
+    p {
+        font-size: 30px;
+        margin: 80px;
+    }
 }
