--- a/main.scss
+++ b/main.scss
@@ -110,3 +110,34 @@ header {
         margin: 80px;
     }
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    h1 {
+        font-size: 36px;
+    }
+
+    div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 700px;
+        p {
+            font-size: 28px;    
+        }
+        img {
+            min-width: 300px;
+        }
+    }
+}
+
+.standout-text {
+    font-weight: bolder;
+}
+#italisised-aside {
+    font-style: italic;
+}
