--- a/main.css
+++ b/main.css
@@ -99,6 +99,8 @@ main {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  margin-top: 80px;
+  margin-bottom: 120px;
 }
 main h1 {
   font-size: 36px;
@@ -126,4 +128,18 @@ main div img {
 
 #first-image {
   min-width: 200px;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #fbf7d8;
+  height: 300px;
+}
+footer a {
+  font-size: 28px;
+  font-weight: bolder;
+  background-color: #fbf7d8;
 }
