--- a/main.scss
+++ b/main.scss
@@ -116,6 +116,8 @@ main {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 80px;
+    margin-bottom: 120px;
 
     h1 {
         font-size: 36px;
@@ -143,4 +145,19 @@ main {
 }
 #first-image {
     min-width: 200px
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: $color-footer;
+    height: 300px;
+
+    a {
+        font-size: 28px;
+        font-weight: bolder;
+        background-color: $color-footer;
+    }
 }
